--- a/index.html
+++ b/index.html
@@ -1,49 +1,64 @@
 <!doctype html>
-<html class="no-js" lang="ru">
+<html class="no-js" lang="ru" data-bs-theme="dark">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Глоссарий TES</title>
-  <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.dataTables.min.css">
-  <link rel="stylesheet" href="https://cdn.datatables.net/plug-ins/2.1.7/features/searchHighlight/dataTables.searchHighlight.css">
-  <meta name="description" content="Полная база текстов всех игр серии The Elder Scrolls: от Arena до Castles.">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.bootstrap5.css">
+  <meta name="description" content="Полная база текстов всех игр серии The Elder Scrolls: от Skyrim и ESO до Blades и Castles.">
 
   <meta property="og:title" content="Глоссарий The Elder Scrolls">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://rueso.ru/glossary/">
   <meta property="og:image" content="">
   <meta property="og:image:alt" content="">
+  <meta property="og:description" content="Полная база текстов всех игр серии The Elder Scrolls: от Skyrim и ESO до Blades и Castles.">
 
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
-
-  <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
-  <table id="main-table" class="display ldb-table" style="width:100%">
-    <thead>
-        <tr>
+<body class="flex-center">
+  <div class="search-wrap">
+    <div class="d-flex justify-content-center">
+      <input type="text" class="form-control form-control-lg" id="main-input" placeholder="Введите искомый текст...">
+    </div>
+
+    <div class="game-checks d-flex justify-content-center flex-wrap">
+      <input type="checkbox" class="btn-check" id="btn-check-eso" checked autocomplete="off" name="eso">
+      <label class="btn btn-outline-secondary" for="btn-check-eso"><img width="30px" src="img/icons/eso.webp"> ESO</label>
+
+      <input type="checkbox" class="btn-check" id="btn-check-blades" autocomplete="off" name="blades">
+      <label class="btn btn-outline-secondary" for="btn-check-blades"><img width="30px" src="img/icons/blades.webp"> Blades</label>
+    </div>
+  </div>
+
+  <div class="main-table-wrap table-responsive">
+    <table id="main-table" class="table dataTable" style="width:100%">
+      <thead>
+          <tr>
+              <th>Game</th>
+              <th>EN</th>
+              <th>RU</th>
+          </tr>
+      </thead>
+      <tfoot>
+          <tr>
             <th>Game</th>
             <th>EN</th>
             <th>RU</th>
-        </tr>
-    </thead>
-    <tfoot>
-        <tr>
-          <th>Game</th>
-          <th>EN</th>
-          <th>RU</th>
-        </tr>
-    </tfoot>
-  </table>
+          </tr>
+      </tfoot>
+    </table>
+  </div>
 
   <script src="//code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="//bartaz.github.io/sandbox.js/jquery.highlight.js"></script>
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.min.js"></script>
+  <script src="//cdn.datatables.net/2.1.7/js/dataTables.bootstrap5.js"></script>
   <script src="//cdn.datatables.net/plug-ins/2.1.7/features/searchHighlight/dataTables.searchHighlight.min.js"></script>
   <script src="js/app.js"></script>
 </body>
