--- a/index.html
+++ b/index.html
@@ -27,11 +27,17 @@
     </div>
 
     <div class="game-checks d-flex justify-content-center flex-wrap">
-      <input type="checkbox" class="btn-check" id="btn-check-eso" checked autocomplete="off" name="eso">
-      <label class="btn btn-outline-secondary" for="btn-check-eso"><img width="30px" src="img/icons/eso.webp"> ESO</label>
+      <input type="checkbox" class="btn-check" id="btn-check-eso" autocomplete="off" name="eso" disabled>
+      <label class="btn btn-outline-secondary" for="btn-check-eso"><img width="32px" src="img/icons/eso.png"> ESO</label>
 
-      <input type="checkbox" class="btn-check" id="btn-check-blades" autocomplete="off" name="blades">
-      <label class="btn btn-outline-secondary" for="btn-check-blades"><img width="30px" src="img/icons/blades.webp"> Blades</label>
+      <input type="checkbox" class="btn-check" id="btn-check-legends" checked autocomplete="off" name="legends">
+      <label class="btn btn-outline-secondary" for="btn-check-legends"><img width="32px" src="img/icons/legends.png"> Legends</label>
+
+      <input type="checkbox" class="btn-check" id="btn-check-blades" checked autocomplete="off" name="blades">
+      <label class="btn btn-outline-secondary" for="btn-check-blades"><img width="32px" src="img/icons/blades.png"> Blades</label>
+
+      <input type="checkbox" class="btn-check" id="btn-check-castles" checked autocomplete="off" name="castles">
+      <label class="btn btn-outline-secondary" for="btn-check-castles"><img width="32px" src="img/icons/castles.png"> Castles</label>
     </div>
   </div>
 
