--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.bootstrap5.css">
-  <meta name="description" content="Полная база текстов всех игр серии The Elder Scrolls: от Skyrim и ESO до Blades и Castles.">
+  <meta name="description" content="Полная база текстов всех игр серии The Elder Scrolls: от Skyrim и ESO до Shadowkey и Castles.">
 
   <meta property="og:title" content="Глоссарий The Elder Scrolls">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://rueso.ru/glossary/">
   <meta property="og:image" content="">
   <meta property="og:image:alt" content="">
-  <meta property="og:description" content="Полная база текстов всех игр серии The Elder Scrolls: от Skyrim и ESO до Blades и Castles.">
+  <meta property="og:description" content="Полная база текстов всех игр серии The Elder Scrolls: от Skyrim и ESO до Shadowkey и Castles.">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -45,16 +45,16 @@
     <table id="main-table" class="table dataTable" style="width:100%">
       <thead>
           <tr>
-              <th>Game</th>
-              <th>EN</th>
-              <th>RU</th>
+              <th></th>
+              <th>Английский</th>
+              <th>Русский</th>
           </tr>
       </thead>
       <tfoot>
           <tr>
-            <th>Game</th>
-            <th>EN</th>
-            <th>RU</th>
+            <th></th>
+            <th>Английский</th>
+            <th>Русский</th>
           </tr>
       </tfoot>
     </table>
