--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="game-checks d-flex justify-content-center flex-wrap">
-      <input type="checkbox" class="btn-check" id="btn-check-eso" autocomplete="off" name="eso" disabled>
+      <input type="checkbox" class="btn-check" id="btn-check-eso" checked autocomplete="off" name="eso">
       <label class="btn btn-outline-secondary" for="btn-check-eso"><img width="32px" src="img/icons/eso.png"> ESO</label>
 
       <input type="checkbox" class="btn-check" id="btn-check-legends" checked autocomplete="off" name="legends">
@@ -65,7 +65,7 @@
   <script src="//bartaz.github.io/sandbox.js/jquery.highlight.js"></script>
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.min.js"></script>
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.bootstrap5.js"></script>
-  <script src="//cdn.datatables.net/plug-ins/2.1.7/features/searchHighlight/dataTables.searchHighlight.min.js"></script>
+  <script src="js/dataTables.searchHighlight.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
