--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Глоссарий TES</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css?v=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.bootstrap5.css">
   <meta name="description" content="Полная база текстов всех игр серии The Elder Scrolls: от Skyrim и ESO до Shadowkey и Castles.">
@@ -23,10 +23,13 @@
 <body class="flex-center">
   <div class="search-wrap">
     <div class="d-flex justify-content-center">
-      <input type="text" class="form-control form-control-lg" id="main-input" placeholder="Введите искомый текст...">
+      <input type="search" class="form-control form-control-lg" id="main-input" placeholder="Введите искомый текст...">
     </div>
 
     <div class="game-checks d-flex justify-content-center flex-wrap">
+      <input type="checkbox" class="btn-check" id="btn-check-morrowind" checked autocomplete="off" name="morrowind">
+      <label class="btn btn-outline-secondary" for="btn-check-morrowind"><img width="32px" src="img/icons/morrowind.png"> Morrowind</label>
+
       <input type="checkbox" class="btn-check" id="btn-check-eso" checked autocomplete="off" name="eso">
       <label class="btn btn-outline-secondary" for="btn-check-eso"><img width="32px" src="img/icons/eso.png"> ESO</label>
 
@@ -66,6 +69,6 @@
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.min.js"></script>
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.bootstrap5.js"></script>
   <script src="js/dataTables.searchHighlight.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/app.js?v=1.0"></script>
 </body>
 </html>
