Added TES IV: Oblivion

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       <input type="checkbox" class="btn-check" id="btn-check-morrowind" checked autocomplete="off" name="morrowind">
       <label class="btn btn-outline-secondary" for="btn-check-morrowind"><img width="32px" src="img/icons/morrowind.png"> Morrowind</label>
 
+      <input type="checkbox" class="btn-check" id="btn-check-oblivion" checked autocomplete="off" name="oblivion">
+      <label class="btn btn-outline-secondary" for="btn-check-oblivion"><img width="32px" src="img/icons/oblivion.png"> Oblivion</label>
+
       <input type="checkbox" class="btn-check" id="btn-check-eso" checked autocomplete="off" name="eso">
       <label class="btn btn-outline-secondary" for="btn-check-eso"><img width="32px" src="img/icons/eso.png"> ESO</label>
 
