--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Глоссарий TES</title>
-  <link rel="stylesheet" href="css/style.css?v=1.0">
+  <link rel="stylesheet" href="css/style.css?v=1.1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.bootstrap5.css">
   <meta name="description" content="Полная база текстов всех игр серии The Elder Scrolls: от Skyrim и ESO до Shadowkey и Castles.">
@@ -42,6 +42,9 @@
 
       <input type="checkbox" class="btn-check" id="btn-check-oblivion" checked autocomplete="off" name="oblivion">
       <label class="btn btn-outline-secondary" for="btn-check-oblivion"><img width="32px" src="img/icons/oblivion.png"> Oblivion</label>
+
+      <input type="checkbox" class="btn-check" id="btn-check-skyrim" checked autocomplete="off" name="skyrim">
+      <label class="btn btn-outline-secondary" for="btn-check-skyrim"><img width="32px" src="img/icons/skyrim.png"> Skyrim</label>
 
       <input type="checkbox" class="btn-check" id="btn-check-eso" checked autocomplete="off" name="eso">
       <label class="btn btn-outline-secondary" for="btn-check-eso"><img width="32px" src="img/icons/eso.png"> ESO</label>
@@ -82,6 +85,6 @@
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.min.js"></script>
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.bootstrap5.js"></script>
   <script src="js/dataTables.searchHighlight.js"></script>
-  <script src="js/app.js?v=1.0"></script>
+  <script src="js/app.js?v=1.1"></script>
 </body>
 </html>
