--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>Глоссарий TES</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.bootstrap5.css">
-  <link rel="stylesheet" href="css/style.css?v=1.3">
+  <link rel="stylesheet" href="css/style.css?v=1.4">
   <meta name="description" content="Полная база текстов всех игр серии The Elder Scrolls: от Skyrim и ESO до Shadowkey и Castles.">
 
   <meta property="og:title" content="Глоссарий The Elder Scrolls">
@@ -33,7 +33,7 @@
 <body class="flex-center">
   <div class="search-wrap">
     <div class="d-flex justify-content-center">
-      <input type="search" class="form-control form-control-lg" id="main-input" placeholder="Введите искомый текст...">
+      <input type="search" class="form-control form-control-lg" id="main-input" placeholder="Введите искомый текст">
     </div>
 
     <div class="game-checks d-flex justify-content-center flex-wrap">
@@ -85,6 +85,6 @@
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.min.js"></script>
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.bootstrap5.js"></script>
   <script src="js/dataTables.searchHighlight.js"></script>
-  <script src="js/app.js?v=1.3"></script>
+  <script src="js/app.js?v=1.4"></script>
 </body>
 </html>
