Temp fix for quotation marks

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <script src="//bartaz.github.io/sandbox.js/jquery.highlight.js"></script>
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.min.js"></script>
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.bootstrap5.js"></script>
-  <script src="js/dataTables.searchHighlight.js"></script>
+  <script src="js/dataTables.searchHighlight.js?v=1.4"></script>
   <script src="js/app.js?v=1.4"></script>
 </body>
 </html>
