--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>Глоссарий TES</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.bootstrap5.css">
-  <link rel="stylesheet" href="css/style.css?v=1.4">
+  <link rel="stylesheet" href="css/style.css?v=1.5">
   <meta name="description" content="Полная база текстов всех игр серии The Elder Scrolls: от Skyrim и ESO до Shadowkey и Castles.">
 
   <meta property="og:title" content="Глоссарий The Elder Scrolls">
@@ -60,11 +60,12 @@
     </div>
   </div>
 
-  <div class="main-table-wrap table-responsive">
+  <div class="main-table-wrap">
     <table id="main-table" class="table dataTable" style="width:100%">
       <thead>
           <tr>
               <th></th>
+              <th>Категория</th>
               <th>Английский</th>
               <th>Русский</th>
           </tr>
@@ -72,6 +73,7 @@
       <tfoot>
           <tr>
             <th></th>
+            <th>Категория</th>
             <th>Английский</th>
             <th>Русский</th>
           </tr>
@@ -84,7 +86,7 @@
   <script src="//bartaz.github.io/sandbox.js/jquery.highlight.js"></script>
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.min.js"></script>
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.bootstrap5.js"></script>
-  <script src="js/dataTables.searchHighlight.js?v=1.4"></script>
-  <script src="js/app.js?v=1.4"></script>
+  <script src="js/dataTables.searchHighlight.js?v=1.5"></script>
+  <script src="js/app.js?v=1.5"></script>
 </body>
 </html>
