--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       <input type="checkbox" class="btn-check" id="btn-check-eso" checked autocomplete="off" name="eso">
       <label class="btn btn-outline-secondary" for="btn-check-eso"><img width="32px" src="img/icons/eso.png"> ESO</label>
 
+      <input type="checkbox" class="btn-check" id="btn-check-redguard" checked autocomplete="off" name="redguard">
+      <label class="btn btn-outline-secondary" for="btn-check-redguard"><img width="32px" src="img/icons/redguard.png"> Redguard</label>
+
       <input type="checkbox" class="btn-check" id="btn-check-legends" checked autocomplete="off" name="legends">
       <label class="btn btn-outline-secondary" for="btn-check-legends"><img width="32px" src="img/icons/legends.png"> Legends</label>
 
