--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>Глоссарий TES</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.bootstrap5.css">
-  <link rel="stylesheet" href="css/style.css?v=1.6">
+  <link rel="stylesheet" href="css/style.css?v=1.7">
   <meta name="description" content="Полная база текстов всех игр серии The Elder Scrolls: от Skyrim и ESO до Shadowkey и Castles.">
 
   <meta property="og:title" content="Глоссарий The Elder Scrolls">
@@ -33,33 +33,33 @@
 <body class="flex-center">
   <div class="search-wrap">
     <div class="d-flex justify-content-center">
-      <input type="search" class="form-control form-control-lg" id="main-input" placeholder="Введите искомый текст">
+      <input type="search" class="form-control form-control-lg" id="main-input" placeholder="Введите искомый текст" autocomplete="off">
     </div>
 
     <div class="game-checks d-flex justify-content-center flex-wrap">
-      <input type="checkbox" class="btn-check" id="btn-check-morrowind" checked autocomplete="off" name="morrowind">
-      <label class="btn btn-outline-secondary" for="btn-check-morrowind"><img width="32px" src="img/icons/morrowind.png"> Morrowind</label>
+      <input type="checkbox" class="btn-check" id="btn-check-morrowind" autocomplete="off" name="morrowind">
+      <label class="btn btn-outline-secondary" for="btn-check-morrowind" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="TES III: Morrowind (2002)"><img width="32px" src="img/icons/morrowind.png"> <span>Morrowind</span></label>
 
-      <input type="checkbox" class="btn-check" id="btn-check-oblivion" checked autocomplete="off" name="oblivion">
-      <label class="btn btn-outline-secondary" for="btn-check-oblivion"><img width="32px" src="img/icons/oblivion.png"> Oblivion</label>
+      <input type="checkbox" class="btn-check" id="btn-check-oblivion" autocomplete="off" name="oblivion">
+      <label class="btn btn-outline-secondary" for="btn-check-oblivion" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="TES IV: Oblivion (2006)"><img width="32px" src="img/icons/oblivion.png"> <span>Oblivion</span></label>
 
-      <input type="checkbox" class="btn-check" id="btn-check-skyrim" checked autocomplete="off" name="skyrim">
-      <label class="btn btn-outline-secondary" for="btn-check-skyrim"><img width="32px" src="img/icons/skyrim.png"> Skyrim</label>
+      <input type="checkbox" class="btn-check" id="btn-check-skyrim" autocomplete="off" name="skyrim">
+      <label class="btn btn-outline-secondary" for="btn-check-skyrim" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="TES V: Skyrim (2011)"><img width="32px" src="img/icons/skyrim.png"> <span>Skyrim</span></label>
 
-      <input type="checkbox" class="btn-check" id="btn-check-eso" checked autocomplete="off" name="eso">
-      <label class="btn btn-outline-secondary" for="btn-check-eso"><img width="32px" src="img/icons/eso.png"> ESO</label>
+      <input type="checkbox" class="btn-check" id="btn-check-eso" autocomplete="off" name="eso">
+      <label class="btn btn-outline-secondary" for="btn-check-eso" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="TES Online (2014)"><img width="32px" src="img/icons/eso.png"> <span>ESO</span></label>
 
-      <input type="checkbox" class="btn-check" id="btn-check-redguard" checked autocomplete="off" name="redguard">
-      <label class="btn btn-outline-secondary" for="btn-check-redguard"><img width="32px" src="img/icons/redguard.png"> Redguard</label>
+      <input type="checkbox" class="btn-check" id="btn-check-redguard" autocomplete="off" name="redguard">
+      <label class="btn btn-outline-secondary" for="btn-check-redguard" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="TESA: Redguard (1998)"><img width="32px" src="img/icons/redguard.png"> <span>Redguard</span></label>
 
-      <input type="checkbox" class="btn-check" id="btn-check-legends" checked autocomplete="off" name="legends">
-      <label class="btn btn-outline-secondary" for="btn-check-legends"><img width="32px" src="img/icons/legends.png"> Legends</label>
+      <input type="checkbox" class="btn-check" id="btn-check-legends" autocomplete="off" name="legends">
+      <label class="btn btn-outline-secondary" for="btn-check-legends" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="TES: Legends (2017)"><img width="32px" src="img/icons/legends.png"> <span>Legends</span></label>
 
-      <input type="checkbox" class="btn-check" id="btn-check-blades" checked autocomplete="off" name="blades">
-      <label class="btn btn-outline-secondary" for="btn-check-blades"><img width="32px" src="img/icons/blades.png"> Blades</label>
+      <input type="checkbox" class="btn-check" id="btn-check-blades" autocomplete="off" name="blades">
+      <label class="btn btn-outline-secondary" for="btn-check-blades" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="TES: Blades (2019)"><img width="32px" src="img/icons/blades.png"> <span>Blades</span></label>
 
-      <input type="checkbox" class="btn-check" id="btn-check-castles" checked autocomplete="off" name="castles">
-      <label class="btn btn-outline-secondary" for="btn-check-castles"><img width="32px" src="img/icons/castles.png"> Castles</label>
+      <input type="checkbox" class="btn-check" id="btn-check-castles" autocomplete="off" name="castles">
+      <label class="btn btn-outline-secondary" for="btn-check-castles" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="TES: Castles (2023)"><img width="32px" src="img/icons/castles.png"> <span>Castles</span></label>
     </div>
   </div>
 
@@ -90,6 +90,6 @@
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.min.js"></script>
   <script src="//cdn.datatables.net/2.1.7/js/dataTables.bootstrap5.js"></script>
   <script src="js/dataTables.searchHighlight.js?v=1.6"></script>
-  <script src="js/app.js?v=1.6"></script>
+  <script src="js/app.js?v=1.7"></script>
 </body>
 </html>
